Attempt to solve the destroy on jam of the ammo feeds

--- a/BT Advanced Gear/weapon/Weapon_RocketLauncher_RL15_Inferno.json
+++ b/BT Advanced Gear/weapon/Weapon_RocketLauncher_RL15_Inferno.json
@@ -55,6 +55,7 @@
 	"AttackRecoil": 1,
 	"Instability": 2,
 	"MissileHealth": 1,
+	"DestroyOnJamming": true,
 	"TrooperSquadDamageModifier": 1.5,
 	"WeaponEffectID": "WeaponEffect-Weapon_LRM15",
 	"Description": {
