--- a/BT Advanced Gear/weapon/Weapon_RocketLauncher_RL15_0_STOCK.json
+++ b/BT Advanced Gear/weapon/Weapon_RocketLauncher_RL15_0_STOCK.json
@@ -53,6 +53,7 @@
 	"AttackRecoil": 1,
 	"Instability": 2,
 	"MissileHealth": 1,
+	"DestroyOnJamming": true,
 	"WeaponEffectID": "WeaponEffect-Weapon_LRM15",
 	"Description": {
 		"Cost": 75000,
