--- a/BT Advanced Gear/weapon/Weapon_RocketLauncher_RL40_Reload.json
+++ b/BT Advanced Gear/weapon/Weapon_RocketLauncher_RL40_Reload.json
@@ -53,6 +53,7 @@
 	"AttackRecoil": 1,
 	"Instability": 2,
 	"MissileHealth": 1,
+	"DestroyOnJamming": true,
 	"WeaponEffectID": "WeaponEffect-Weapon_LRM20",
 	"Description": {
 		"Cost": 250000,
