Minor ME update and Black Market list update

--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -264,7 +264,8 @@
 		"CritHitText": "HIT {0}: {1}",
 		"CritDestroyedText": "DESTROYED: {0}",
 		"CritDestroyedDeathText": "DESTROYED: Unit is incapacitated, reason is {0}",
-		"CritLinkedText": "Critical hits are linked to '{0}'"
+		"CritLinkedText": "Critical hits are linked to '{0}'",
+		"ShowComponentFloatie": false
 	},
 	"DynamicSlots": {
 		"Enabled": true,
