--- a/BT Advanced Unique Mechs/mech/mechdef_mistlynx_MLX-ED.json
+++ b/BT Advanced Unique Mechs/mech/mechdef_mistlynx_MLX-ED.json
@@ -12,8 +12,6 @@
 			"unit_advanced",
 			"unit_bracket_low",
 			"unit_gladiator",
-			"unit_rarity_1",
-			"SolarisVIIMercLeague",
 			"ai_heat_low",
 			"ai_dfa_normal",
 			"ai_flank_high",
@@ -49,10 +47,10 @@
 		{
 			"DamageLevel": "Functional",
 			"Location": "Head",
-			"CurrentArmor": 30,
+			"CurrentArmor": 45,
 			"CurrentRearArmor": -1,
 			"CurrentInternalStructure": 16,
-			"AssignedArmor": 30,
+			"AssignedArmor": 45,
 			"AssignedRearArmor": -1
 		},
 		{
@@ -67,29 +65,29 @@
 		{
 			"DamageLevel": "Functional",
 			"Location": "LeftTorso",
-			"CurrentArmor": 40,
-			"CurrentRearArmor": 15,
+			"CurrentArmor": 35,
+			"CurrentRearArmor": 25,
 			"CurrentInternalStructure": 30,
-			"AssignedArmor": 40,
-			"AssignedRearArmor": 15
+			"AssignedArmor": 35,
+			"AssignedRearArmor": 25
 		},
 		{
 			"DamageLevel": "Functional",
 			"Location": "CenterTorso",
-			"CurrentArmor": 60,
-			"CurrentRearArmor": 20,
+			"CurrentArmor": 50,
+			"CurrentRearArmor": 30,
 			"CurrentInternalStructure": 40,
-			"AssignedArmor": 60,
-			"AssignedRearArmor": 20
+			"AssignedArmor": 50,
+			"AssignedRearArmor": 30
 		},
 		{
 			"DamageLevel": "Functional",
 			"Location": "RightTorso",
-			"CurrentArmor": 40,
-			"CurrentRearArmor": 15,
+			"CurrentArmor": 35,
+			"CurrentRearArmor": 25,
 			"CurrentInternalStructure": 30,
-			"AssignedArmor": 40,
-			"AssignedRearArmor": 15
+			"AssignedArmor": 35,
+			"AssignedRearArmor": 25
 		},
 		{
 			"DamageLevel": "Functional",
@@ -200,6 +198,28 @@
 		{
 			"MountedLocation": "RightArm",
 			"ComponentDefID": "emod_arm_part_upper",
+			"SimGameUID": "",
+			"ComponentDefType": "Upgrade",
+			"HardpointSlot": 0,
+			"GUID": null,
+			"DamageLevel": "Functional",
+			"prefabName": null,
+			"hasPrefabName": false
+		},
+		{
+			"MountedLocation": "RightArm",
+			"ComponentDefID": "emod_arm_part_lower",
+			"SimGameUID": "",
+			"ComponentDefType": "Upgrade",
+			"HardpointSlot": 0,
+			"GUID": null,
+			"DamageLevel": "Functional",
+			"prefabName": null,
+			"hasPrefabName": false
+		},
+		{
+			"MountedLocation": "RightArm",
+			"ComponentDefID": "emod_arm_part_hand",
 			"SimGameUID": "",
 			"ComponentDefType": "Upgrade",
 			"HardpointSlot": 0,
