Changed the drop lances and drop slots

--- a/BiggerDrops/settings.json
+++ b/BiggerDrops/settings.json
@@ -10,19 +10,19 @@
 	"showAdditionalArgoUpgrades": true,
 	"enable4thCategory": false,
 	"argoUpgradeName": "Command & Control",
-	"argoUpgradeCategory1Name": "Mech and BA Control",
-	"argoUpgradeCategory2Name": "Tank Control",
+	"argoUpgradeCategory1Name": "Lance 1 and BA Control",
+	"argoUpgradeCategory2Name": "Lance 2 Control",
 	"argoUpgradeCategory3Name": "Drop Tonnage",
 	"argoUpgradeCategory4Name": "Drop Information",
 	"CuInitialVehicles": 2,
 	"CuV2FormationSize" : 8,
 	"CuV2InitialSlots" : [
-		"default_omni_slot",
-		"default_omni_slot",
-		"default_mech_slot",
-		"default_mech_slot",
 		"default_mech_tank_slot",
 		"default_mech_tank_slot",
+		"default_mech_tank_slot",
+		"default_mech_tank_slot",
+		"default_tank_mech_slot",
+		"default_tank_mech_slot",
 		"default_ba_slot",
 		"default_ba_slot"
 	]
