LinuxFire force base game fire
forces base game fire and smoke textures to true.  Requires linux users to reset CAC to default in game settings Mod Settings menu

--- a/LinuxFire/CustomAmmoCategoriesSettings.json
+++ b/LinuxFire/CustomAmmoCategoriesSettings.json
@@ -279,6 +279,8 @@
 	"StatisticOnResultScreenRealIconsScale": 1.5,
 	"StatisticOnResultScreenTurretSprite": "turret_unit_result_stat",
 	"StatisticOnResultScreenBattleArmorSprite": "battle_armor_unit_result_stat",
+	"BuildinBurningFXDisableSmoke": true,
+	"ForceBuildinBurningFX": true,
 	"RemoveToHitModifiers": [
 		"DAMAGED"
 	],
