--- a/DefaultFire/CustomAmmoCategoriesSettings.json
+++ b/DefaultFire/CustomAmmoCategoriesSettings.json
@@ -252,6 +252,18 @@
 	"AIPathingOptimization": true,
 	"AIPathingSamplesLimit": 120,
 	"AIPathingMultithread": false,
+	"PhysicsAoE_Weapons": true,
+	"PhysicsAoE_Deffered": true,
+	"PhysicsAoE_Minefield": true,
+	"PhysicsAoE_API": true,
+	"PhysicsAoE_API_Height" : 10,
+	"AIAwareArtillery":true,
+	"AIMinefieldAware": true,
+	"AIMinefieldAwareAllMines": false,
+	"AIMinefieldAwareAllMinesCritical": true,
+	"AIMinefieldDamageTreshold": 0.1,
+	"AIMinefieldIgnoreMoveDistance": 36,
+	"AIMinefieldIgnorePosDelta": 5,
 	"ObjectiveBlackBackgroundOnEnter": false,
 	"EnableMinimap": false,
 	"MinimapShowObjectives": false,
