Redid Trinity Alliance factions, trying Allies field

--- a/BT Advanced Factions/factions/faction_ClanSnowRaven.json
+++ b/BT Advanced Factions/factions/faction_ClanSnowRaven.json
@@ -4,7 +4,12 @@
 	"ShortName": "Snow Raven",
 	"Demonym": "Snow Raven",
 	"Government": "Clan",
-	"Allies": [],
+	"Allies": [
+		"ClanWolf",
+		"ClanJadeFalcon",
+		"Outworld",
+		"Locals"
+	],
 	"Enemies": [
 		"Kurita",
 		"Davion",
@@ -12,9 +17,7 @@
 		"331stDivision",
 		"DarkCaste",
 		"ClanGhostBear",
-		"ClanJadeFalcon",
 		"ClanNovaCat",
-		"ClanWolf",
 		"Tortuga",
 		"Locals",
 		"AuriganPirates",
