--- a/DefaultFire/CustomAmmoCategoriesSettings.json
+++ b/DefaultFire/CustomAmmoCategoriesSettings.json
@@ -254,9 +254,9 @@
 	"AIPathingOptimization": true,
 	"AIPathingSamplesLimit": 120,
 	"AIPathingMultithread": false,
-	"PhysicsAoE_Weapons": true,
-	"PhysicsAoE_Deffered": true,
-	"PhysicsAoE_Minefield": true,
+	"PhysicsAoE_Weapons": false,
+	"PhysicsAoE_Deffered": false,
+	"PhysicsAoE_Minefield": false,
 	"PhysicsAoE_API": true,
 	"PhysicsAoE_API_Height" : 10,
 	"AIAwareArtillery":true,
