just a couple mission boundry tweaks
added to maps to have a bit larger area for valid spawn locations

--- a/MissionControl/settings.json
+++ b/MissionControl/settings.json
@@ -155,6 +155,10 @@
 				"IncreaseBoundarySizeByPercentage": 0.4
 			},
 			{
+				"MapId": "mapArena_bigLoch_vHigh",
+				"IncreaseBoundarySizeByPercentage": 0.4
+			},
+			{
 				"MapId": "mapGeneral_toxicMire_aBad",
 				"ContractTypeName": "CaptureEscort",
 				"IncreaseBoundarySizeByPercentage": 0.4
@@ -236,6 +240,10 @@
 			},
 			{
 				"MapId": "mapGeneral_mountainHold_bMoon",
+				"IncreaseBoundarySizeByPercentage": 0.4
+			},
+			{
+				"MapId": "mapGeneral_lostCanyon_aBad",
 				"IncreaseBoundarySizeByPercentage": 0.4
 			},
 			{
