--- a/MissionControl/settings.json
+++ b/MissionControl/settings.json
@@ -247,6 +247,10 @@
 				"IncreaseBoundarySizeByPercentage": 0.4
 			},
 			{
+				"MapId": "mapGeneral_bigCrater_bMoon",
+				"IncreaseBoundarySizeByPercentage": 0.4
+			},
+			{
 				"ContractTypeName": "AmbushConvoy",
 				"IncreaseBoundarySizeByPercentage": 0.2
 			}
