Fixed a repme and CGS spawning

--- a/MissionControl/settings.modpack.json
+++ b/MissionControl/settings.modpack.json
@@ -122,6 +122,18 @@
 					"DifficultyMod": -1
 				},
 				{
+					"Faction": "ClanGoliathScorpion",
+					"DifficultyMod": -1
+				},
+				{
+					"Faction": "CGSOmegaGalaxy",
+					"DifficultyMod": -1
+				},
+				{
+					"Faction": "ScorpionEmpire",
+					"DifficultyMod": -1
+				},
+				{
 					"Faction": "ClanDiamondShark",
 					"DifficultyMod": -1
 				},
