New Phoenix hero

--- a/BT Advanced Factions/factions/faction_ClanSnowRaven.json
+++ b/BT Advanced Factions/factions/faction_ClanSnowRaven.json
@@ -22,7 +22,8 @@
 		"Locals",
 		"AuriganPirates",
 		"Mercenaries",
-		"WordOfBlake"
+		"WordOfBlake",
+		"RimWorldsRepublic"
 	],
 	"Presence": 0.1,
 	"DefaultCombatLeaderCastDefId": "castDef_LocalsDefault",
