--- a/MissionControl/settings.json
+++ b/MissionControl/settings.json
@@ -251,6 +251,10 @@
 				"IncreaseBoundarySizeByPercentage": 0.4
 			},
 			{
+				"MapId": "mapArena_deathValley_aDes",
+				"IncreaseBoundarySizeByPercentage": 0.4
+			},
+			{
 				"ContractTypeName": "AmbushConvoy",
 				"IncreaseBoundarySizeByPercentage": 0.2
 			}
