--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -67,240 +67,123 @@
                     "Names" : [
                         {
                             "Location" : "LeftArm",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "FRONT",
+                            "ShortLabel" : "F"
                         },
                         {
                             "Location" : "RightArm",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "REAR",
+                            "ShortLabel" : "R"
                         },
                         {
                             "Location" : "LeftLeg",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "LEFT SIDE",
+                            "ShortLabel" : "LS"
                         },
                         {
                             "Location" : "RightLeg",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "RIGHT SIDE",
+                            "ShortLabel" : "RS"
                         },
                         {
                             "Location" : "Head",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "TURRET",
+                            "ShortLabel" : "T"
                         }
                     ]
                 }
             },
             {
                 "Tags" : [
-                    "Quad"
+                    "QuadMech"
                 ],
                 "Template" : {
                     "Names" : [
                         {
                             "Location" : "LeftArm",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Front Left Leg",
+                            "ShortLabel" : "FL"
                         },
                         {
                             "Location" : "RightArm",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Front Right Leg",
+                            "ShortLabel" : "RL"
                         },
                         {
                             "Location" : "LeftLeg",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Hind Left Leg",
+                            "ShortLabel" : "HL"
                         },
                         {
                             "Location" : "RightLeg",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Hind Right Leg",
+                            "ShortLabel" : "HR"
                         }
                     ]
                 }
             },
             {
                 "Tags" : [
-                    "Squad"
+                    "ProtoMech"
                 ],
                 "Template" : {
                     "Names" : [
                         {
                             "Location" : "LeftArm",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Trooper 5",
+                            "ShortLabel" : "5"
                         },
                         {
                             "Location" : "RightArm",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Trooper 6",
+                            "ShortLabel" : "6"
                         },
                         {
                             "Location" : "LeftLeg",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Trooper 7",
+                            "ShortLabel" : "7"
                         },
                         {
                             "Location" : "RightLeg",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Trooper 8",
+                            "ShortLabel" : "8"
                         },
                         {
                             "Location" : "CenterTorso",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Trooper 2",
+                            "ShortLabel" : "2"
                         },
                         {
                             "Location" : "RightTorso",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Trooper 4",
+                            "ShortLabel" : "4"
                         },
                         {
                             "Location" : "LeftTorso",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Trooper 3",
+                            "ShortLabel" : "3"
                         },
                         {
                             "Location" : "Head",
-                            "Label" : null,
-                            "ShortLabel" : null
+                            "Label" : "Trooper 1",
+                            "ShortLabel" : "1"
                         }
                     ]
                 }
             }
         ],
-        "GyroCategorizer" : {
-            "CategoryId" : "Gyro"
-        },
-        "GyroSlotChange" : {
-            "From" : 3,
-            "By" : 0,
-            "FromIsMin" : false,
-            "NewMin" : null
-        },
-        "CockpitCategorizer" : {
-            "CategoryId" : "Cockpit"
-        },
-        "CockpitTonnageChange" : {
-            "From" : 0,
-            "By" : 3,
-            "FromIsMin" : false,
-            "NewMin" : null
-        },
-        "CockpitSlotChange" : {
-            "From" : 1,
-            "By" : 0,
-            "FromIsMin" : false,
-            "NewMin" : null
-        },
-        "SensorsACategorizer" : {
-            "CategoryId" : "SensorsA"
-        },
-        "SensorsBCategorizer" : {
-            "CategoryId" : "SensorsB"
-        },
-        "SensorsBSlotChange" : {
-            "From" : 2,
-            "By" : -1,
-            "FromIsMin" : false,
-            "NewMin" : null
-        },
-        "LegUpgradesCategorizer" : {
-            "CategoryId" : "LegFootActuator"
-        },
-        "LegUpgradesSlotChange" : {
-            "From" : 3,
-            "By" : -1,
-            "FromIsMin" : true,
-            "NewMin" : 1
-        },
-        "ChassisDefSlotsChanges" : [
-            {
-                "Location" : "LeftTorso",
-                "Change" : {
-                    "From" : 10,
-                    "By" : 2,
-                    "FromIsMin" : false,
-                    "NewMin" : null
-                }
-            },
-            {
-                "Location" : "RightTorso",
-                "Change" : {
-                    "From" : 10,
-                    "By" : 2,
-                    "FromIsMin" : false,
-                    "NewMin" : null
-                }
-            },
-            {
-                "Location" : "LeftLeg",
-                "Change" : {
-                    "From" : 4,
-                    "By" : 2,
-                    "FromIsMin" : false,
-                    "NewMin" : null
-                }
-            },
-            {
-                "Location" : "RightLeg",
-                "Change" : {
-                    "From" : 4,
-                    "By" : 2,
-                    "FromIsMin" : false,
-                    "NewMin" : null
-                }
-            },
-            {
-                "Location" : "Head",
-                "Change" : {
-                    "From" : 1,
-                    "By" : 5,
-                    "FromIsMin" : false,
-                    "NewMin" : null
-                }
-            },
-            {
-                "Location" : "CenterTorso",
-                "Change" : {
-                    "From" : 4,
-                    "By" : 11,
-                    "FromIsMin" : false,
-                    "NewMin" : null
-                }
-            },
-            {
-                "Location" : "LeftLeg",
-                "Change" : {
-                    "From" : 2,
-                    "By" : 4,
-                    "FromIsMin" : false,
-                    "NewMin" : null
-                }
-            },
-            {
-                "Location" : "RightLeg",
-                "Change" : {
-                    "From" : 2,
-                    "By" : 4,
-                    "FromIsMin" : false,
-                    "NewMin" : null
-                }
-            },
-            {
-                "Location" : "Head",
-                "Change" : {
-                    "From" : 3,
-                    "By" : 3,
-                    "FromIsMin" : false,
-                    "NewMin" : null
-                }
-            }
-        ],
-        "ChassisDefInitialTonnage" : true,
+        "GyroCategorizer" : null,
+        "GyroSlotChange" : null,
+        "CockpitCategorizer" : null,
+        "CockpitTonnageChange" : null,
+        "CockpitSlotChange" : null,
+        "SensorsACategorizer" : null,
+        "SensorsBCategorizer" : null,
+        "SensorsBSlotChange" : null,
+        "LegUpgradesCategorizer" : null,
+        "LegUpgradesSlotChange" : null,
+        "ChassisDefSlotsChanges" : null,
+        "ChassisDefInitialTonnage" : false,
         "ChassisDefInitialToTotalTonnageFactor" : 0.1,
         "ChassisDefArmorStructureRatio" : true,
         "ChassisDefMaxJumpjets" : false,
@@ -321,36 +204,7 @@
             "BackgroundColor" : null
         },
         "AutoFixWeaponDefSlotsChanges" : [
-            {
-                "Type" : "AC5",
-                "SlotChange" : null,
-                "TonnageChange" : null
-            },
-            {
-                "Type" : "AC10",
-                "SlotChange" : null,
-                "TonnageChange" : null
-            },
-            {
-                "Type" : "AC20",
-                "SlotChange" : null,
-                "TonnageChange" : null
-            },
-            {
-                "Type" : "Gauss",
-                "SlotChange" : null,
-                "TonnageChange" : null
-            },
-            {
-                "Type" : "LargeLaserPulse",
-                "SlotChange" : null,
-                "TonnageChange" : null
-            },
-            {
-                "Type" : "LRM20",
-                "SlotChange" : null,
-                "TonnageChange" : null
-            }
+            
         ],
         "ArmActuatorAdder" : {
             "Enabled" : true,
@@ -373,12 +227,14 @@
         "EnabledDescription" : "Allows each component to define destructive forces in case they explode, also implements proper CASE."
     },
     "CompressFloatieMessages" : {
-        "Enabled" : false,
+        "Enabled" : true,
         "EnabledDescription" : "Compresses similar floatie messages to a single message with a multiplier. E.g. MEDIUM LASER DESTROYED x 4"
     },
     "CriticalEffects" : {
         "Enabled" : true,
         "EnabledDescription" : "Allows custom multiple critical hit states for individual components.",
+        "ShowComponentFloatie" : false,
+        "ShowComponentFloatieDescription" : "Shows the component status after being damaged using floaties.",
         "DebugLogEffects" : false,
         "DebugLogEffectsDescription" : "Log effect changes for debugging purposes.",
         "DefaultMaxCritsPerSlots" : 0,
@@ -389,6 +245,7 @@
             "Upgrade"
         ],
         "DefaultMaxCritsComponentTypesDescription" : "For which types the default max crits are applied.",
+        "DescriptionEnabled" : true,
         "DescriptionIdentifier" : "Criticals",
         "DescriptionTemplate" : "Critical Effects:<b><color=#F79B26FF>\r\n{{elements}}</color></b>\r\n",
         "ElementTemplate" : " <indent=10%><line-indent=-5%><line-height=65%>{{element}}</line-height></line-indent></indent>\r\n",
@@ -401,10 +258,10 @@
         "CritLinkedText" : "Critical hits are linked to '{0}'"
     },
     "CustomCapacities" : {
-        "Enabled" : false,
+        "Enabled" : true,
         "EnabledDescription" : "Enables some carry rules.",
         "CarryLeftOverTopOffDescription" : "Non CBT mechanism. The value is multiplied by the chassis tonnage. Carry in hand might have left overs, `top off` - `carry in hand usage` = `carry left over capacity`. Modifiable via custom capacity collection 'CarryLeftOverTopOff'.",
-        "CarryLeftOverTopOff" : 0.1,
+        "CarryLeftOverTopOff" : 0,
         "CarryHandErrorOneFreeHand" : "OVERWEIGHT: 'Mechs handheld carry weight requires one free hand.",
         "CarryWeight" : {
             "Description" : {
@@ -499,12 +356,12 @@
         "EnforceRulesForAdditionalInternalHeatSinksDescription" : "Can't have those juicy ++ cooling systems with smaller fusion cores than the rules allow it.",
         "KeepIncompatibleHeatSinks" : false,
         "KeepIncompatibleHeatSinksDescription" : "Replace incompatible heat sinks with compatible ones.",
-        "EngineMissingFallbackHeatSinkCapacity" : 0,
+        "EngineMissingFallbackHeatSinkCapacity" : 30,
         "EngineMissingFallbackHeatSinkCapacityDescription" : "Heat sink capacity if no engine is detected.",
         "CBTWalkAndRunMPRounding" : false,
         "AdditionalWalkSpeed" : 0,
         "AdditionalRunSpeed" : 0,
-        "MovementPointDistanceMultiplier" : 28,
+        "MovementPointDistanceMultiplier" : 30,
         "JumpJetMovementPointDistanceMultiplier" : null,
         "MinimJumpHeat" : 9,
         "JumpJetDefaultJumpHeat" : 3,
@@ -1025,10 +882,6 @@
             "ignore_shutdown"
         ]
     },
-    "InvalidInventory" : {
-        "Enabled" : false,
-        "EnabledDescription" : "Make sure invalid mech configurations can't be saved in skirmish and can't be fielded in the campaign."
-    },
     "MechLabSlots" : {
         "Enabled" : true,
         "EnabledDescription" : "Makes the mech lab adhere to any custom mech slot counts.",
@@ -1039,17 +892,15 @@
         "HideHelpButton" : true,
         "HideECMButton" : true,
         "ZoomMaximumScale" : 0.95,
-        "MechLabStatusLeftShift" : 25,
+        "MechLabStatusLeftShift" : 0,
         "MechLabMechRightShift" : 0,
         "MechLabArmTopPadding" : 120,
         "TopLeftWidget" : {
-            "Enabled" : true,
             "Label" : "Chassis",
             "ShortLabel" : "S",
             "Slots" : 3
         },
         "TopRightWidget" : {
-            "Enabled" : false,
             "Label" : "Quirk",
             "ShortLabel" : "Q",
             "Slots" : 0
@@ -1176,7 +1027,7 @@
         "MechLabMechInfoWidgetFormat" : "0.###",
         "MechLabMechInfoWidgetToolTipFormat" : "0.######",
         "MechLabComponentFormat" : "0.###",
-        "UnderweightWarningThreshold" : 0.1,
+        "UnderweightWarningThreshold" : 0.5,
         "UnderweightWarningThresholdDescription" : "How many tons a mech has to be underweight to show a warning",
         "WeightsDefaultBonusSlot" : null,
         "WeightsDefaultBonusSlotDescription" : "What BonusSlot to use on a SlotElement for tonnage changes."
