Working on new event chain

--- a/LostInSpace/settings.json
+++ b/LostInSpace/settings.json
@@ -145,6 +145,27 @@
 		],
 		"starsystemdef_EbonsEnd": [
 			"LiS__NavReq__331stHider__starsystemdef_EbonsEnd__HIDDEN"
+		],
+		"starsystemdef_Winston": [
+			"LiS__NavReq__CGSHider__starsystemdef_Winston__HIDDEN"
+		],
+		"starsystemdef_Holdout": [
+			"LiS__NavReq__CGSHider__starsystemdef_Holdout__HIDDEN"
+		],
+		"starsystemdef_FellWind": [
+			"LiS__NavReq__CGSHider__starsystemdef_FellWind__HIDDEN"
+		],
+		"starsystemdef_Greystone": [
+			"LiS__NavReq__CGSHider__starsystemdef_Greystone__HIDDEN"
+		],
+		"starsystemdef_Glory": [
+			"LiS__NavReq__CGSHider__starsystemdef_Glory__HIDDEN"
+		],
+		"starsystemdef_Khanquest": [
+			"LiS__NavReq__CGSHider__starsystemdef_Khanquest__HIDDEN"
+		],
+		"starsystemdef_Hallelujah": [
+			"LiS__NavReq__CGSHider__starsystemdef_Hallelujah__HIDDEN"
 		]
 	}
 }
