--- a/BT Advanced Gear/weapon/Weapon_Vehicular_Grenade_Launcher_0-STOCK.json
+++ b/BT Advanced Gear/weapon/Weapon_Vehicular_Grenade_Launcher_0-STOCK.json
@@ -15,8 +15,8 @@
 			"AMSImmune"
 		],
 		"InternalAmmoTonnage": {
-            "InternalAmmoTons": 0.1
-        },
+			"InternalAmmoTons": 0.1
+		},
 		"AmmoCost": {
 			"PerUnitCost": 150
 		}
@@ -99,7 +99,7 @@
 			"isBaseMode": false,
 			"AOECapable": true,
 			"AOERange": 30,
-			"AOEDamage": 15,
+			"AOEDamage": 15
 		}
 	],
 	"ComponentTags": {
