map mission area override
fixes premounted BA not having a first round action unmounted in contract on this map

--- a/MissionControl/settings.json
+++ b/MissionControl/settings.json
@@ -255,6 +255,10 @@
 				"IncreaseBoundarySizeByPercentage": 0.4
 			},
 			{
+				"MapId": "mapGeneral_highPlateaus_aDes",
+				"IncreaseBoundarySizeByPercentage": 0.4
+			},
+			{
 				"ContractTypeName": "AmbushConvoy",
 				"IncreaseBoundarySizeByPercentage": 0.2
 			}
