--- a/InnerSphereMap/settings.json
+++ b/InnerSphereMap/settings.json
@@ -140,6 +140,42 @@
 		{
 			"factionName": "Rim",
 			"logoImage": "RimCollectionLogo"
+		},
+		{
+			"factionName": "RimWorldsRepublic",
+			"logoImage": "RimWorldsRepublicLogo"
+		},
+		{
+			"factionName": "CalderonProtectorate",
+			"logoImage": "CalderonProtectorateLogo"
+		},
+		{
+			"factionName": "FroncReaches",
+			"logoImage": "FroncReachesLogo"
+		},
+		{
+			"factionName": "ScorpionEmpire",
+			"logoImage": "ScorpionEmpireLogo"
+		},
+		{
+			"factionName": "JacobsonHaven",
+			"logoImage": "JacobsonHavenLogo"
+		},
+		{
+			"factionName": "Cameron",
+			"logoImage": "TerranHegemonyLogo"
+		},
+		{
+			"factionName": "SanctuaryAlliance",
+			"logoImage": "SanctuaryAllianceLogo"
+		},
+		{
+			"factionName": "DaneSacellum",
+			"logoImage": "DaneSacellumLogo"
+		},
+		{
+			"factionName": "MallardRepublic",
+			"logoImage": "MallardRepublicLogo"
 		}
 	]
 }
