minor adjustment to The Gun

--- a/InnerSphereMap/settings.json
+++ b/InnerSphereMap/settings.json
@@ -138,6 +138,14 @@
 			"logoImage": "ClanJadeFalconLogo"
 		},
 		{
+			"factionName": "ClanGoliathScorpion",
+			"logoImage": "ClanGoliathScorpionLogo"
+		},
+		{
+			"factionName": "ClanSnowRaven",
+			"logoImage": "ClanSnowRavenLogo"
+		},
+		{
 			"factionName": "Rim",
 			"logoImage": "RimCollectionLogo"
 		},
