pmp escort affinity nerf
no infinite stacking

--- a/PracticeMakesPerfect/settings.json
+++ b/PracticeMakesPerfect/settings.json
@@ -1725,7 +1725,9 @@
 			"description": "This pilot is an expert at escorting other units and keeping them out of harm's way. Allies take 15% less damage.",
 			"effectDataJO": [
 				{
-					"durationData": {},
+					"durationData":  {
+						"stackLimit": 1
+					},
 					"targetingData": {
 						"effectTriggerType": "Passive",
 						"effectTargetType": "AllAllies",
