--- a/DefaultFire/CustomAmmoCategoriesSettings.json
+++ b/DefaultFire/CustomAmmoCategoriesSettings.json
@@ -257,7 +257,7 @@
 	"PhysicsAoE_Weapons": false,
 	"PhysicsAoE_Deffered": false,
 	"PhysicsAoE_Minefield": false,
-	"PhysicsAoE_API": true,
+	"PhysicsAoE_API": false,
 	"PhysicsAoE_API_Height" : 10,
 	"AIAwareArtillery":true,
 	"AIMinefieldAware": true,
