Hardpoint Expansion: Enfield, Hollander I/II, HUssar, Lynx, Ostscoot, Sentinel, Sha Yu, Swordsman, Toro, Victor

--- a/BT Advanced Mechs/chassis/chassisdef_lynx_LNX-9Q.json
+++ b/BT Advanced Mechs/chassis/chassisdef_lynx_LNX-9Q.json
@@ -80,6 +80,10 @@
 				{
 					"WeaponMountID": "Energy",
 					"Omni": false
+				},
+				{
+					"WeaponMountID": "AntiPersonnel",
+					"Omni": false
 				}
 			],
 			"Tonnage": 0,
@@ -111,6 +115,10 @@
 				},
 				{
 					"WeaponMountID": "Energy",
+					"Omni": false
+				},
+				{
+					"WeaponMountID": "AntiPersonnel",
 					"Omni": false
 				}
 			],
