--- a/BT Advanced Mechs/chassis/chassisdef_lynx_LNX-9R.json
+++ b/BT Advanced Mechs/chassis/chassisdef_lynx_LNX-9R.json
@@ -84,6 +84,10 @@
 				{
 					"WeaponMountID": "Energy",
 					"Omni": false
+				},
+				{
+					"WeaponMountID": "AntiPersonnel",
+					"Omni": false
 				}
 			],
 			"Tonnage": 0,
@@ -97,6 +101,10 @@
 			"Hardpoints": [
 				{
 					"WeaponMountID": "Energy",
+					"Omni": false
+				},
+				{
+					"WeaponMountID": "AntiPersonnel",
 					"Omni": false
 				}
 			],
@@ -127,10 +135,6 @@
 		{
 			"Location": "RightArm",
 			"Hardpoints": [
-				{
-					"WeaponMountID": "Energy",
-					"Omni": false
-				},
 				{
 					"WeaponMountID": "Energy",
 					"Omni": false
