--- a/BT Advanced Mechs/chassis/chassisdef_lynx_LNX-8Q.json
+++ b/BT Advanced Mechs/chassis/chassisdef_lynx_LNX-8Q.json
@@ -80,6 +80,10 @@
 				{
 					"WeaponMountID": "Energy",
 					"Omni": false
+				},
+				{
+					"WeaponMountID": "AntiPersonnel",
+					"Omni": false
 				}
 			],
 			"Tonnage": 0,
@@ -93,6 +97,10 @@
 			"Hardpoints": [
 				{
 					"WeaponMountID": "Energy",
+					"Omni": false
+				},
+				{
+					"WeaponMountID": "AntiPersonnel",
 					"Omni": false
 				}
 			],
