--- a/BT Advanced Mechs/chassis/chassisdef_lynx_LNX-9C.json
+++ b/BT Advanced Mechs/chassis/chassisdef_lynx_LNX-9C.json
@@ -85,6 +85,10 @@
 				{
 					"WeaponMountID": "Energy",
 					"Omni": false
+				},
+				{
+					"WeaponMountID": "AntiPersonnel",
+					"Omni": false
 				}
 			],
 			"Tonnage": 0,
@@ -98,6 +102,10 @@
 			"Hardpoints": [
 				{
 					"WeaponMountID": "Energy",
+					"Omni": false
+				},
+				{
+					"WeaponMountID": "AntiPersonnel",
 					"Omni": false
 				}
 			],
