--- a/PracticeMakesPerfect/settings.json
+++ b/PracticeMakesPerfect/settings.json
@@ -80,7 +80,10 @@
 		"JacobsonHaven",
 		"DaneSacellum",
 		"FroncReaches",
-		"CalderonProtectorate"
+		"CalderonProtectorate",
+		"ClanGoliathScorpion",
+		"ScorpionEmpire",
+		"RimWorldsRepublic"
 	],
 	"WhiteListMissions": [
 		"SimpleBattle",
@@ -1725,7 +1728,7 @@
 			"description": "This pilot is an expert at escorting other units and keeping them out of harm's way. Allies take 15% less damage.",
 			"effectDataJO": [
 				{
-					"durationData":  {
+					"durationData": {
 						"stackLimit": 1
 					},
 					"targetingData": {
