--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -216,7 +216,8 @@
 	},
 	"ComponentExplosions": {
 		"Enabled": true,
-		"EnabledDescription": "Allows each component to define destructive forces in case they explode, also implements proper CASE."
+		"EnabledDescription": "Allows each component to define destructive forces in case they explode, also implements proper CASE.",
+		"PassthroughHeadToCenterTorso" : false
 	},
 	"CompressFloatieMessages": {
 		"Enabled": true,
